--- a/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.html
+++ b/src/app/m-trabajo-pozo/componentes/registro-trabajo-diario/registro-trabajo-diario.component.html
@@ -185,7 +185,7 @@
       </div>
       <div class="col-md-12">
         <label>{{cs.fechaAccion}}:</label>
-        <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate" [inputStyle]="{ width: '100%' }"
+        <p-calendar [style]="{ width: '100%' }" [minDate]="minDateTrabajo" [maxDate]="maxDate" [inputStyle]="{ width: '100%' }"
           [(ngModel)]="registroDiario.fechaAccion"></p-calendar>
       </div>
       <div class="col-md-12">
@@ -236,7 +236,7 @@
       </div>
       <div class="col-md-12">
         <label>{{cs.fechaAccion}}:</label>
-        <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate" [inputStyle]="{ width: '100%' }"
+        <p-calendar [style]="{ width: '100%' }" [minDate]="minDateTrabajo" [maxDate]="maxDate" [inputStyle]="{ width: '100%' }"
           [(ngModel)]="registroDiarioEdit.fechaAccion"></p-calendar>
       </div>
       <div class="col-md-12">
