--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
@@ -42,14 +42,16 @@
         </div>
         <div class="col-md-12">
           <label><b>Campo:*</b></label>
-          <p-dropdown [options]="campoList" [filter]="true" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);">
-          </p-dropdown>
+          <input type="text" [(ngModel)]="portafolio.campo.camNombre" pInputText disabled>
+          <!-- <p-dropdown [options]="campoList" [filter]="true" [(ngModel)]="campo" (onChange)="cargarCampoPozo(campo);">
+          </p-dropdown> -->
         </div>
         <div class="col-md-12">
           <label><b>Pozo:*</b></label>
-          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" (onChange)="cargarOperadoraByPozCompaniaPetrolera(pozo);"
+          <input type="text" [(ngModel)]="portafolio.pozo.pozNombre" pInputText disabled>
+          <!-- <p-dropdown [options]="pozoList" [(ngModel)]="pozo" (onChange)="cargarOperadoraByPozCompaniaPetrolera(pozo);"
             [filter]="true">
-          </p-dropdown>
+          </p-dropdown> -->
         </div>
         <div class="col-md-12">
           <label><b>Tipo pozo:*</b></label>
@@ -64,22 +66,27 @@
           <label><b>Trabajo:*</b></label>
           <p-dropdown [options]="tipoTrabajoList" [(ngModel)]="tipoTrabajo"></p-dropdown>
         </div>
-
+        <div class="col-md-12" *ngIf="tipoTrabajo.codigoTipoTrabajo == 3">
+          <label><b>Fecha trabajo sin torre:*</b></label>
+          <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate"
+            [inputStyle]="{ width: '100%' }" [(ngModel)]="portafolio.fechaTrabajoSinTorre"></p-calendar>
+        </div>
         <div class="col-md-12" *ngIf="tipoTrabajo.codigoTipoTrabajo != 1">
           <label><b>Numero:</b></label>
           <input type="text" [(ngModel)]="portafolio.numeroTrabajo" pInputText>
         </div>
 
-        <div class="col-md-12" *ngIf="tipoTrabajo.codigoTipoTrabajo == 3">
-          <label><b>Fecha trabajo sin torre:</b></label>
-          <p-calendar [style]="{ width: '100%' }" [minDate]="minDate" [maxDate]="maxDate"
-            [inputStyle]="{ width: '100%' }" [(ngModel)]="portafolio.fechaTrabajoSinTorre"></p-calendar>
+        <div class="col-md-12">
+          <label><b>Estado:</b></label>
+          <p-dropdown [options]="estadoList" [(ngModel)]="portafolio.estado"></p-dropdown>
         </div>
+
         <div class="col-md-12">
           <label><b>Observación:</b></label>
           <textarea class="form-control" rows="3" [(ngModel)]="portafolio.observacion"></textarea>
-
         </div>
+
+
 
         <!-- <div class="col-md-12">
           <label ><b>Estado:</b></label>
@@ -89,6 +96,10 @@
     </div>
     <div class="col-md-4">
       <div class="row">
+        <div class="col-md-12">
+          <label><b>Motivo de cambio:</b></label>
+          <p>{{portafolio.motivoCambio}}</p>
+        </div>
         <div class="col-md-12">
 
           <table class="table table-striped table-sm">
