Cambio de etiquetas, registro diario validaciones

--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -216,7 +216,7 @@
     <div class="row mt-1 mb-3 justify-content-end">
       <div class="col-md-4 ">
         <button type="button" class="btn btn-sm btn-danger btn-block"
-          (click)="closeUsuarioModalBusqueda()">Cancelar</button>
+          (click)="closeUsuarioModalBusqueda()">SALIR</button>
       </div>
     </div>
   </div>
