--- a/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/editar-portafolio/editar-portafolio.component.html
@@ -148,11 +148,11 @@
 
       <div class="row mt-3">
         <div class="col-md-6">
-          <button type="button" class="btn btn-sm btn-primary btn-block" (click)="guardarPortafolio()">EDITAR</button>
+          <button type="button" class="btn btn-sm btn-primary btn-block" (click)="guardarPortafolio()">Editar</button>
         </div>
         <div class="col-md-6">
           <button type="button" class="btn btn-sm btn-danger btn-block"
-            (click)="closeModalEditarPortafolio()">CANCELAR</button>
+            (click)="closeModalEditarPortafolio()">Volver</button>
         </div>
       </div>
     </div>
