--- a/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="col-md-6 mt-1">
             <button type="button" class="btn btn-sm btn-danger btn-block" (click)="goToBuscarPortafolio()">
-              <i class="fa fa-sign-out"> Cancelar</i>
+              <i class="fa fa-sign-out"> Volver</i>
             </button>
           </div>
         </div>
