--- a/src/app/m-trabajo-pozo/componentes/verificacion-tasa/verificacion-tasa.component.html
+++ b/src/app/m-trabajo-pozo/componentes/verificacion-tasa/verificacion-tasa.component.html
@@ -83,7 +83,7 @@
             </div>
             <div class="col-md-6">
                 <button type="button" class="btn btn-sm btn-block btn-danger" (click)="goToBuscarPortafolio()">
-                    Cancelar
+                    Vovler
                 </button>
             </div>
         </div>
