--- a/src/app/m-trabajo-bitacora/componentes/verificacion-produccion/verificacion-produccion.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-produccion/verificacion-produccion.component.html
@@ -435,7 +435,7 @@
             <td>{{verificacionProduccion.valoracion |ValoracionProduccion }} </td>
             <td>{{verificacionProduccion.justificado | JustificadoBitacora}} </td>
             <td>{{verificacionProduccion.observacion }} </td>
-            <td>{{verificacionProduccion.estado| estadoBitacora}} </td>
+            <td>{{verificacionProduccion.estado}} </td>
             <td>{{verificacionProduccion.fecha_actualizacion | date:'dd/MM/yyyy'}} </td>
             <td class="text-center">
           </td>
