--- a/src/app/m-trabajo-bitacora/componentes/seguimiento-novedad/seguimiento-novedad.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/seguimiento-novedad/seguimiento-novedad.component.html
@@ -115,7 +115,7 @@
           <label for="Seguimiento"><b>Nro. de Novedad:*</b></label>
         </div>
         <div class="col-md">
-          <p>{{seguimientoNovedad.codVerfTrabajo}} </p>
+          <p>{{verificacionNovedad.codVerfNov}} </p>
           <br>
         </div>
       </div>
@@ -209,15 +209,7 @@
 <div class="row">
   <div class="col-md-6">
     <div class="row">
-      <div class="col-md-4">
-        <br>
-        <label for="Seguimiento"><b>Estado:*</b></label>
-      </div>
-      <div class="col-md">
-        <br>
-        <p-dropdown [options]="estadolist" [(ngModel)]="seguimientoNovedad.estado" readonly></p-dropdown>
-        <br>
-      </div>
+    
     </div>
   </div>
 </div>
@@ -284,13 +276,13 @@
         <tbody>
 
 
-          <tr *ngFor="let seguimiento of seguimientoList" style="font-size: 11px">    
-            <td>{{seguimiento.codSegNov}} </td>
+          <tr *ngFor="let seguimiento of seguimientoList  | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">    
+            <td>{{i+1}} </td>
             <td>{{seguimiento.numDoc}} </td>
             <td>{{seguimiento.entradaSalida }}  </td>
             <td>{{seguimiento.asunto }}  </td>
             <td>{{seguimiento.tipoNovedad }}  </td>
-            <td>{{seguimiento.estado }}  </td>
+            <td>{{seguimiento.estado| estadoBitacora }}  </td>
             
             <td>
                 <ul *ngIf="seguimiento.documento"
