--- a/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-novedad/verificacion-novedad.component.html
@@ -150,14 +150,7 @@
   </div>
 
   <div class="col-md-6" *ngIf="usuario.perfil.codigoPerfil == '21'">
-      <div class="row">       
-          <div class="col-md-4">
-            <label for="verificacionNovedad"><b>Estado:*</b></label>
-          </div>
-          <div class="col-md">
-          <p-dropdown [options]="estadolist" [(ngModel)]="verificacioNovedad.estado" readonly></p-dropdown>
-          </div>
-        </div>  
+
   </div>
 </div>
 
@@ -207,6 +200,9 @@
   <div class="row" >
   </div>
   <hr />
+  
+  <div class="row" >
+      <div class="col-md-12">
   <div class="row justify-content-end">
     <div class="col-md-4">
       <button type="button" class="btn btn-sm btn-info btn-block" (click)="guardar()">
@@ -214,6 +210,17 @@
       </button>
     </div>
   </div>
+  <br>
+  <div *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '16'" class="row justify-content-end">  
+
+      <div class="col-md-4">
+        <button type="button" class="btn btn-sm btn-danger btn-block" (click)="volverMenu()">
+          Volver
+        </button>
+      </div>
+    </div> 
+  </div> 
+</div> 
 </p-fieldset>
 
 <br>
@@ -255,7 +262,7 @@
         <tbody>
           <tr *ngFor="let editarNovedad of novedadList | paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;" style="font-size: 11px">
 
-            <td>{{portafolio.codigoPortafolio}}_{{i+1}}</td>
+            <td> {{editarNovedad.codVerfNov  }}</td>
             <td>{{editarNovedad.novedad  | JustificadoBitacora }} </td>
             <td>{{editarNovedad.justificado | JustificadoBitacora}} </td>
             <td>{{editarNovedad.estado | estadoBitacora}}  </td>
@@ -288,7 +295,7 @@
 
 
 <div class="row">
-  <div class="col-md-12 row justify-content-center">
+  <div *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'"  class="col-md-12 row justify-content-center">
       <button type="button" class="btn btn-secondary btn-sm"  (click)="volver(portafolio) "><i class="fa fa-bar-chart" aria-hidden="true">&nbsp;Verificar Producción</i>
       </button>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
