--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -108,7 +108,7 @@
             <td>{{portafolio.tipoTrabajo.tipoTrabajo}}</td>
             <td>{{portafolio.numeroTrabajo}}</td>
             <td>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</td>
-            <td>{{portafolio.estado | estadoPortafolio}}</td>
+            <td>{{portafolio.estado }}</td>
             <td>
               <div class="btn-group dropleft">
                 <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"
