--- a/src/app/m-trabajo-bitacora/componentes/verificacion-inyector/verificacion-inyector.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/verificacion-inyector/verificacion-inyector.component.html
@@ -106,11 +106,17 @@
 <p-fieldset legend="Tipo Pozo Inyector" [style]="{width: '90%'}">
  
 
-    <div class="row">
-        
+  <div   *ngIf="verificacionProduccion.formDisabled ==0">
+    <div class="row"  *ngFor="let produccion of verificacionProduccionListar">
+
+  
+
       <div class="col-md-4">
-        <button pButton type="button" label="Cargar ANTES de inicio de trabajo" class="ui-button-success" (click)="cargarDatos()"></button> 
+   
+        
+        <button pButton type="button"  label="Cargar ANTES de inicio de trabajo" class="btn-block ui-button-success" (click)="cargarDatos(produccion)"></button> 
       </div>
+      
 
 
       <div class="col-md-4">
@@ -118,7 +124,7 @@
             <label for="verificacion Fechas"><b># Registros:</b></label>
          </div>
          <div class="col-md-1">
-          <p-dropdown [options]="registrosList" [(ngModel)]="verificacionProduccion.numRegistros"readonly></p-dropdown>
+          <p-dropdown [options]="registrosList"  [(ngModel)]="verificacionProduccion.numRegistros"readonly></p-dropdown>
         </div>
         
     </div>
@@ -126,11 +132,12 @@
 
       <div class="col-md-4">
           
-        <button pButton type="button" label="Cargar DESPUES de fin de trabajo" class="ui-button-warning" (click)="cargarDatosDespues()" ></button>
+        <button pButton type="button" label="Calcular " class="ui-button-warning btn-block"  [disabled]="buttonDespues" (click)="cargarDatosDespues(produccion)" ></button>
       </div>
-
     
-</div>
+    </div>
+    
+  </div>
 
 
 <br>
@@ -145,10 +152,8 @@
         <thead>
         <tr>
             <th>Fecha</th>
-            <th>Bloque</th>
-            <th>Yacimiento</th>
-            <th>Pozo</th>
-            <th>BPPD</th>
+            <th>Baipd</th>
+
             
         </tr>
       </thead>
@@ -156,17 +161,13 @@
         <tr *ngFor="let produccion of datosAntes" style="font-size: 11px">
 
          
-        <td>{{produccion.f_produccion  | date:'dd/MM/yyyy' }} </td>
-        <td>{{produccion.bloqueDetalle}} </td>
-        <td>{{produccion.yacimiento}} </td>
-        <td>{{produccion.pozo_nombre}} </td>
-        <td>{{produccion.bppd}} </td>
+        <td>{{produccion.Fecha | date:'dd/MM/yyyy' }} </td>
+        <td>{{produccion.Baipd}} </td>
+       
        
         </tr>
       <tr>
           <td> <p><b>Promedio:</b></td>
-          <td></td>
-          <td></td>
           <td> <p>{{produccion.PromedioAntesMostrar}}</p></td>
       </tr>
 
@@ -198,26 +199,20 @@
       <thead>
       <tr>
           <th>Fecha</th>
-          <th>Bloque</th>
-          <th>Yacimiento</th>
-          <th>Pozo</th>
-          <th>BPPD</th>
+          <th>Baipd</th>
+          
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let produccion of datosDespues" style="font-size: 11px">
 
-        <td>{{produccion.f_produccion  | date:'dd/MM/yyyy' }} </td>
-        <td>{{produccion.bloqueDetalle}} </td>
-        <td>{{produccion.yacimiento}} </td>
-        <td>{{produccion.pozo_nombre}} </td>
-        <td>{{produccion.bppd}} </td>
+        <td>{{produccion.Fecha  | date:'dd/MM/yyyy' }} </td>
+        <td>{{produccion.Baipd}} </td>
+
       </tr>
 
       <tr>
           <td> <p><b>Promedio:</b></td>
-          <td></td>
-          <td></td>
           <td> <p>{{produccion.PromedioDespuesMostrar}}</p></td>
       </tr>
 
@@ -320,21 +315,6 @@
           </div>
  
           
-    <div class="row">
-      
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-4">
-            <br>
-            <label for="verificacionProduccion"><b>Estado:*</b></label>
-          </div>
-          <div class="col-md">
-            <br>
-          <p-dropdown [options]="estadolist" [(ngModel)]="verificacionProduccion.estado" readonly></p-dropdown>
-          </div>
-        </div>
-      </div>
-    </div>
 
     
 
@@ -370,7 +350,7 @@
 
     <div class="row justify-content-end">
       <div class="col-md-4">
-        <button type="button" class="btn btn-sm btn-info btn-block" (click)="guardar()">
+        <button type="button" class="btn btn-sm btn-info btn-block" (click)="editarProduccion(verificacionProduccion)">
           Guardar
         </button>
       </div>
@@ -420,7 +400,7 @@
             <td>{{verificacionProduccion.estado| estadoBitacora}} </td>
             <td>{{verificacionProduccion.fecha_actualizacion | date:'dd/MM/yyyy'}} </td>
             <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="editarProduccion(verificacionProduccion,produccion);"></i>            
+              <i class="fa fa-pencil-square-o fa-2x" (click)="debloquearActualizacion(verificacionProduccion)"></i>            
           </td>
           </tr>
 
